fix: remove position setting

--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -1,6 +1,6 @@
 .taskBox {
-  position: relative;
-  z-index: 1800;
+  // position: relative;
+  // z-index: 1800;
   height: calc(100vh - 9rem);
   background: #f6f1fd;
   padding: 1.5rem 1.33rem;
