--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -119,6 +119,10 @@
       color: #222222;
       line-height: 2rem;
       margin: 0rem 1rem 1.67rem;
+
+      a {
+        text-decoration: underline;
+      }
     }
 
     .btnList {
