--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -15,7 +15,7 @@
   }
 
   .rewardMainBox {
-    background: rgba(#8e50e4, 0.08);
+    background: #f4f4f9;
     overflow: hidden;
   }
   .carnivalRewrads {
@@ -64,11 +64,11 @@
       text-align: left;
       p {
         width: 80%;
-        font-size: 1.33rem;
-        font-family: Inter-Regular, Inter;
-        font-weight: 400;
+        font-size: 1.75rem;
+        font-family: Inter-Medium, Inter;
+        font-weight: 500;
         color: #8e50e4;
-        line-height: 2rem;
+        line-height: 1.75rem;
       }
       .imageBox {
         text-align: center;
