--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -3,7 +3,8 @@
   padding: 6.83rem 2.5rem 2.5rem;
 
   background: #ffffff;
-  box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(142, 80, 228, 0.2);
+  // box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(142, 80, 228, 0.2);
+  box-shadow: 0rem 0.83rem 1.67rem 0rem #eaeaf3;
   border-radius: 1rem;
 
   // display: flex;
@@ -113,7 +114,7 @@
         font-size: 1.33rem;
         font-family: Inter-Bold, Inter;
         font-weight: bold;
-        color: rgba(#222, 0.3);
+        color: rgba(#222222, 0.3);
         line-height: 1.33rem;
       }
 
@@ -129,14 +130,18 @@
           flex-grow: 1;
           .stepDesc {
             margin-bottom: 1.17rem;
-            font-size: 1.33rem;
+
             font-family: Inter-Regular, Inter;
             font-weight: 400;
-            color: rgba(#222, 0.7);
+            font-size: 1.33rem;
+            color: #222222;
             line-height: 2rem;
-
             a {
               text-decoration: underline;
+            }
+            b {
+              font-family: Inter-SemiBold, Inter;
+              font-weight: 600;
             }
           }
           .btnList {
@@ -362,7 +367,6 @@
       height: 2rem;
       margin-right: 0.42rem;
     }
-
   }
   .taskDesc {
     display: flex;
