feat: update task text

--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -58,7 +58,7 @@
     .rewardDesc {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: flex-end;
       margin-top: 1.33rem;
       margin-bottom: 3.25rem;
       text-align: left;
@@ -68,7 +68,7 @@
         font-family: Inter-Medium, Inter;
         font-weight: 500;
         color: #8e50e4;
-        line-height: 1.75rem;
+        line-height: 2.33rem;
       }
       .imageBox {
         text-align: center;
