--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -668,6 +668,8 @@
       }
 
       .rewardDesc {
+        margin-top: 0.83rem;
+        margin-bottom: 2.33rem;
         P {
           font-size: 1.33rem;
           font-family: Inter-Medium, Inter;
