--- a/components/PageHome/components/SectionTitle/style.module.scss
+++ b/components/PageHome/components/SectionTitle/style.module.scss
@@ -7,9 +7,9 @@
     font-weight: 900;
     color: #222222;
     // line-height: 3rem;
-    background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    // background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
+    // -webkit-background-clip: text;
+    // -webkit-text-fill-color: transparent;
     white-space: nowrap;
   }
 
