--- a/components/PageHome/RewardGames/styles.module.scss
+++ b/components/PageHome/RewardGames/styles.module.scss
@@ -1,9 +1,13 @@
-.hotGames {
-  .hotGamesBox {
+.rewardGames {
+  min-height: 36rem;
+  padding-bottom: 2.92rem;
+  background: #f4f4f9;
+
+  .rewardGamesBox {
     height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 6.75rem;
+    padding-top: 5.17rem;
 
     .cardList {
       display: flex;
@@ -12,8 +16,8 @@
       margin-top: 3.33rem;
 
       & > div {
-        width: calc((100% - 8.32rem) / 5);
-        margin-bottom: 2.67rem;
+        width: calc((100% - 4.16rem) / 3);
+        margin-bottom: 2.08rem;
 
         box-shadow: none;
         &:hover {
@@ -25,86 +29,62 @@
 }
 
 @media screen and (max-width: 1650px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       width: 80%;
       .cardList {
-        // max-height: calc((80vw - 7rem) / 2 + 300px);
-        max-height: calc((80vw - 7rem) / 2 + 242px);
-        overflow: hidden;
-        & > div {
-          width: calc((100% - 7rem) / 4);
-          margin-bottom: 2.3rem;
-        }
       }
     }
   }
 }
 
 @media screen and (max-width: 1440px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       width: 83.3%;
-      padding-top: 6.67rem;
+      // padding-top: 6.67rem;
       .cardList {
-        // max-height: calc((83vw - 6rem) / 2 + 300px);
-        max-height: calc((83vw - 6rem) / 2 + 238px);
-
-        & > div {
-          width: calc((100% - 6rem) / 4);
-          margin-bottom: 2rem;
-        }
       }
     }
   }
 }
 
 @media screen and (max-width: 1240px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       width: 89%;
       padding-top: 5rem;
 
       .cardList {
-        max-height: calc((89vw - 6rem) / 2 + 236px);
-
-        margin-top: 2.5rem;
       }
     }
   }
 }
 
 @media screen and (max-width: 1024px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       width: 92.2%;
       padding-top: 5rem;
 
       .cardList {
-        // max-height: calc((92.2vw - 6rem) / 2 + 264px);
-
-        margin-top: 2.5rem;
       }
     }
   }
 }
 
 @media screen and (max-width: 1024px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       .cardList {
-        max-height: calc((92.2vw) + 264px);
-        & > div {
-          width: calc((100% - 4rem) / 3);
-        }
       }
     }
   }
 }
 
 @media screen and (max-width: 600px) {
-  .hotGames {
-    .hotGamesBox {
+  .rewardGames {
+    .rewardGamesBox {
       width: calc(100% - 2.66rem);
       padding-top: 2.5rem;
 
@@ -113,7 +93,7 @@
         height: auto;
         max-height: none;
         & > div {
-          width: calc((100% - 1.33rem) / 2);
+          width: 100%;
           margin-bottom: 1.33rem;
         }
       }
