--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -362,6 +362,7 @@
     margin-top: 1.25rem;
     margin-bottom: 2.5rem;
     .iconBox {
+      flex-shrink: 0;
       position: relative;
       width: 2rem;
       height: 2rem;
@@ -377,6 +378,7 @@
     color: #222222;
     line-height: 1.67rem;
     .iconBox {
+      flex-shrink: 0;
       position: relative;
       width: 2rem;
       height: 2rem;
