--- a/components/PageHome/JoinCommunity/styles.module.scss
+++ b/components/PageHome/JoinCommunity/styles.module.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   align-items: center;
 
+  background-image: url(../../../public/community_section_bg.png);
+  background-size: 100% 100%;
+
   h2 {
     margin-top: 3.75rem;
     font-size: 4rem;
