--- a/components/PageHome/TrialingGame/style.module.scss
+++ b/components/PageHome/TrialingGame/style.module.scss
@@ -3,21 +3,36 @@
     height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 6.67rem;
-    padding-bottom: 6.67rem;
+    padding-top: 5rem;
+    padding-bottom: 4.92rem;
 
-    .subtitle {
-      font-size: 1.5rem;
-      font-family: Inter-Regular, Inter;
-      font-weight: 400;
-      color: rgba($color: #222222, $alpha: 0.5);
-      line-height: 1.5rem;
-      margin-top: 1.67rem;
+    .addressInfo {
+      display: flex;
+      align-items: center;
+      margin-top: 2.5rem;
+
+      .iconBox {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        margin-right: 0.67rem;
+
+        svg {
+          width: 2rem;
+          height: 2rem;
+        }
+      }
+
+      font-size: 1.33rem;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #222222;
+      line-height: 1.33rem;
     }
     .cardList {
       display: flex;
       flex-direction: column;
-      margin-top: 5rem;
+      margin-top: 0.92rem;
 
       & > div {
         & + div {
@@ -42,7 +57,7 @@
   .trialgame {
     .trialgameBox {
       width: 83.3%;
-      padding-top: 6.67rem;
+      // padding-top: 6.67rem;
       .cardList {
       }
     }
@@ -53,7 +68,7 @@
   .trialgame {
     .trialgameBox {
       width: 89%;
-      padding-top: 5rem;
+      // padding-top: 5rem;
 
       .cardList {
       }
@@ -65,7 +80,7 @@
   .trialgame {
     .trialgameBox {
       width: 92.2%;
-      padding-top: 5rem;
+      // padding-top: 5rem;
 
       .cardList {
       }
@@ -76,17 +91,31 @@
 @media screen and (max-width: 600px) {
   .trialgame {
     .trialgameBox {
-      padding-top: 3.33rem;
-      .subtitle {
+      width: calc(100% - 2.66rem);
+      padding-top: 2.5rem;
+      padding-bottom: 1.33rem;
+
+      .addressInfo {
+        margin-top: 0.92rem;
+        align-items: center;
+        .iconBox {
+          margin-right: 0.33rem;
+          display: inline-flex;
+          align-items: center;
+          svg {
+            width: 1.67rem;
+            height: 1.67rem;
+          }
+        }
         font-size: 1.17rem;
-        font-family: Inter-Regular, Inter;
-        font-weight: 400;
-        color: rgba($color: #222222, $alpha: 0.5);
-        line-height: 1.67rem;
-        margin-top: 0.83rem;
+        font-family: Inter-Medium, Inter;
+        font-weight: 500;
+        color: #222222;
+        line-height: 1.17rem;
       }
+
       .cardList {
-        margin-top: 2.5rem;
+        margin-top: 0.83rem;
         & > div {
           & + div {
             margin-top: 1.33rem;
