--- a/components/PageHome/GameStrategy/style.module.scss
+++ b/components/PageHome/GameStrategy/style.module.scss
@@ -1,17 +1,19 @@
 .gameStrategy {
   // height: 134rem;
+  background-color: white;
 
   .gameStrategyBox {
     // height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 6.75rem;
+    padding-top: 5rem;
+    padding-bottom: 3rem;
 
     .cardList {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-top: 3.33rem;
+      margin-top: 2.5rem;
       & > div {
         width: calc(50% - 1rem);
 
@@ -35,7 +37,7 @@
   .gameStrategy {
     .gameStrategyBox {
       width: 83.3%;
-      padding-top: 6.67rem;
+      // padding-top: 6.67rem;
       .cardList {
       }
     }
@@ -87,6 +89,7 @@
   .gameStrategy {
     .gameStrategyBox {
       padding-top: 2.5rem;
+      padding-bottom: 1.17rem;
     }
   }
 }
