--- a/components/PageHome/RewardGames/styles.module.scss
+++ b/components/PageHome/RewardGames/styles.module.scss
@@ -1,19 +1,19 @@
 .rewardGames {
   min-height: 36rem;
-  padding-bottom: 2.92rem;
   background: #f4f4f9;
 
   .rewardGamesBox {
     height: 100%;
     width: 78.2%;
     margin: auto;
-    padding-top: 5.17rem;
+    padding-top: 5rem;
+    padding-bottom: 2.92rem;
 
     .cardList {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-top: 3.33rem;
+      margin-top: 2.5rem;
 
       & > div {
         width: calc((100% - 4.16rem) / 3);
@@ -53,7 +53,7 @@
   .rewardGames {
     .rewardGamesBox {
       width: 89%;
-      padding-top: 5rem;
+      // padding-top: 5rem;
 
       .cardList {
       }
@@ -65,7 +65,7 @@
   .rewardGames {
     .rewardGamesBox {
       width: 92.2%;
-      padding-top: 5rem;
+      // padding-top: 5rem;
 
       .cardList {
         & > div {
@@ -83,6 +83,8 @@
     .rewardGamesBox {
       width: calc(100% - 2.66rem);
       padding-top: 2.5rem;
+      padding-bottom: 0rem;
+      margin-bottom: -1.33rem;
 
       .cardList {
         margin-top: 1.67rem;
