--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -103,7 +103,7 @@
       margin-bottom: 1.25rem;
     }
     p {
-      font-size: 1.5rem;
+      font-size: 17px;
       font-family: Inter-SemiBold, Inter;
       font-weight: 600;
       color: #ffffff;
