--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -310,6 +310,10 @@
   cursor: pointer;
 
   .socialMediaBox {
+    -webkit-animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      both;
+    animation: slide-bottom 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
     display: none;
     position: absolute;
     background: #ffffff;
